Fixed z-index of header

--- a/css/style2.css
+++ b/css/style2.css
@@ -10,6 +10,7 @@ body {
 	position: sticky;
 	top: 0;
 	background-color: #FACDC1;
+  z-index: 6;
 }
 
 /* for the header to appear larger than the body text*/
